Fixed a typo in the author's name.

--- a/assignment1/report.tex
+++ b/assignment1/report.tex
@@ -1,7 +1,7 @@
 \documentclass[]{report}
 
 \title{INF-2710 Assignment 1: Reading In Depth}
-\author{Guilherme Gonçalves Schardong - 1412728}
+\author{Guilherme Gon\c{c}alves Schardong - 1412728}
 
 \begin{document}
 \maketitle
