Finished the assignment 3.

--- a/assignment3/sys_mapping.tex
+++ b/assignment3/sys_mapping.tex
@@ -7,43 +7,22 @@
 
 \maketitle
 
-\section{Work Description}
-What is the main research question for the systematic mapping?
-
-Plan a systematic mapping, indicating:
-\begin{itemize}
-\item [DONE] the search terms (and how they are composed into query strings).
-\item [DONE] the target digital libraries, repositories, and other resources
-\item [DONE] the inclusion and exclusion criteria
-\item selection procedures
-\item quality assessment checklist and procedures
-\item data collection (what data will be extracted from each paper)
-\item data analysis (how will you tabulate the papers and what questions you aim to answer)
-\end{itemize}
-
-Pilot test your plan, checking whether any important reference that you know of fails to be included (and revise plan accordingly).
-
 \section{Systematic Mapping Plan}
 
-\subsection{Search Terms}
+\subsection{Search Terms and Sources}
 
 The search terms to be used in the systematic mapping process are: Representative Model Selection, Optimization and Clustering.
-A possible search query is: keywords=``Representative Model Selection'' and (``Optimization'' or ``Clustering'')
+A possible search query is: \textit{keywords=``Representative Model Selection'' and (``Optimization'' or ``Clustering'')}
 
-\subsection{Target Digital Libraries}
-
-To conduct the mapping process, we will use the ACM, IEEE, Springer, CiteSeer and Google Scholar digital libraries. The main publications are the Computers \& Geosciences journal and conferences organized by the Society of Petroleum Engineers. The search will be done using the JabRef reference management software. Two authors with interesting works related to ours are: Sarma, Pallav and Schiozer, Denis J.
+To conduct the mapping process, we will use the ACM, IEEE, Springer, CiteSeer and Google Scholar digital libraries. After a preliminary search, we have concluded that the main publications are the Computers \& Geosciences journal and conferences organized by the Society of Petroleum Engineers. The same search process yielded two authors with works related to ours: Sarma, Pallav and Schiozer, Denis J.. The search will be done using the JabRef reference management software.
 
 \subsection{Inclusion/Exclusion Criteria}
 
-The inclusion criteria include: Full papers written in English between the years of 2000 and 2016; conference papers peer evaluated by the abstract, but only if directly related to the research question.
-
-The exclusion criteria used by the review are: Papers that did not go through a peer review process; poorly written, or papers without a clear research question; guideline papers.
+The inclusion criteria include: Full papers written in English between the years of 2000 and 2016; conference papers peer evaluated by the abstract, but only if directly related to the research question. The exclusion criteria used by the review are: Papers that did not go through a peer review process; poorly written, or papers without a clear research question; guideline papers.
 
 \subsection{Selection Procedures, Data Collection and Analysis}
 
-The selection procedures will consist of 1 researcher reading the title, abstract and conclusions of the papers while looking for a research question/subquestion similar to ours.
-From each paper, the year, title, authors and affiliations, source (journal/conference) and research question will be collected.
+The selection procedures will consist of 1 researcher reading the title, abstract and conclusions of the papers while looking for a research question/subquestion similar to ours. From each paper, the year, title, authors and affiliations, source (journal/conference) and research question will be collected.
 
 The results will be tabulated by number of papers per year per source; number of selected papers per year per source after excluding those not conforming to the set criteria, and number of papers per year per source after reading the title, abstract and conclusions.
 
@@ -54,5 +33,16 @@ To assess the quality of the papers they must pass through a checklist composed 
 \item How does it relate to our question?
 \item How related is the area of application to ours?
 \end{enumerate}
+
+Each item will have a score ranging between 1-5. To be considered for further analysis, a paper must score 10 or higher.
+
+The analysis of the data aims to answer the following questions:
+
+\begin{itemize}
+\item Who are the lead researchers in the topic?
+\item Is this research question recent?
+\item If not recent, how old are the preliminary attempts to solve the problem?
+\item Is the research question considered solved? Are there possibilities for other attempts using different approaches?
+\end{itemize}
 
 \end{document}
