Added another topic to the ending slide. Changed the date.

--- a/assignment4/slides.tex
+++ b/assignment4/slides.tex
@@ -30,7 +30,7 @@
 
 \title{Selecting Representative Models from Large Ensembles}
 \author{Guilherme Gon\c{c}alves Schardong}
-\date{April 2016}
+\date{\today}
 
 \begin{document}
 	
@@ -111,6 +111,10 @@
   \begin{itemize}
   \item Several papers related to classification tasks;
   \item Similar results in clustering approaches (Ensemble of clusterings and consensus clustering);
+  \item No time-series ensemble selection techniques;
+    \begin{itemize}
+    \item Contribution potential.
+    \end{itemize}
   \end{itemize}
 \end{frame}
 
