Added more slides containing divisions between the sections. Added the title slide at the end of the presentation as well.

--- a/assignment4/slides.tex
+++ b/assignment4/slides.tex
@@ -28,7 +28,7 @@
 
 %\captionsetup{compatibility=false}
 
-\title{Selecting Representative Models from Large Ensembles}
+\title{Selecting Representative Models from Time-series Ensembles}
 \author{Guilherme Gon\c{c}alves Schardong}
 \date{\today}
 
@@ -43,6 +43,10 @@
 \end{frame}
 
 \section{Introduction}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
 \begin{frame}{Introduction}
   \begin{itemize}
     \item Increased use of ensemble based methods;
@@ -60,6 +64,10 @@
 \end{frame}
 
 \section{Research Question}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
 \begin{frame}{Research Question}
   \begin{itemize}
     \item Given a large set of models, how can a statistically significant subset be selected, such that analysis tasks done with the subset are equivalent to using the original set?
@@ -67,6 +75,10 @@
 \end{frame}
 
 \section{Systematic Mapping}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
 \subsection{Planning}
 \begin{frame}{Reference Databases}
   \begin{itemize}
@@ -107,6 +119,7 @@
   \end{figure}
 \end{frame}
 
+\subsection{Preliminary Conclusions}
 \begin{frame}{Systematic Mapping Preliminary Conclusions}
   \begin{itemize}
   \item Several papers related to classification tasks;
@@ -116,6 +129,11 @@
     \item Contribution potential.
     \end{itemize}
   \end{itemize}
+\end{frame}
+
+\section{}
+\begin{frame}
+  \titlepage
 \end{frame}
 
 \end{document}
