Minor tweaks to the presentation. Fixed an error in the conclusions.

--- a/assignment4/slides.tex
+++ b/assignment4/slides.tex
@@ -28,7 +28,7 @@
 
 %\captionsetup{compatibility=false}
 
-\title{Selecting Representative Models from Time-series Ensembles}
+\title{Selecting Representative Models from Time series Ensembles}
 \author{Guilherme Gon\c{c}alves Schardong}
 \date{\today}
 
@@ -58,7 +58,7 @@
 \begin{frame}{Example of an Ensemble}
   \begin{figure}
     \includegraphics[width=\columnwidth]{line-fan.pdf}
-    \caption{Example of a time-series ensemble. On the left an overlaid line chart and on the right, the equivalent fan chart.}
+    \caption{Example of a time series ensemble.}
     \label{fig:sample}
   \end{figure}
 \end{frame}
@@ -124,7 +124,7 @@
   \begin{itemize}
   \item Several papers related to classification tasks;
   \item Similar results in clustering approaches (Ensemble of clusterings and consensus clustering);
-  \item No time-series ensemble selection techniques;
+  \item Few time series ensemble selection techniques (1 paper describing an adequate method);
     \begin{itemize}
     \item Contribution potential.
     \end{itemize}
