Capitalized a title character. Changed an item in the conclusions.

--- a/assignment4/slides.tex
+++ b/assignment4/slides.tex
@@ -28,7 +28,7 @@
 
 %\captionsetup{compatibility=false}
 
-\title{Selecting Representative Models from Time series Ensembles}
+\title{Selecting Representative Models from Time Series Ensembles}
 \author{Guilherme Gon\c{c}alves Schardong}
 \date{\today}
 
@@ -106,7 +106,7 @@
     \begin{tabular}{lllllll}
       & \textbf{ACM} & \textbf{\begin{tabular}[c]{@{}l@{}}Springer\\ Link\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Science\\ Direct\end{tabular}} & \textbf{IEEExplore} & \textbf{Scopus} & \textbf{Total} \\ \hline
       Total & 11           & 10                                                               & 8                                                                 & 32                  & 84              & 145            \\
-      E.C.  & 4            & 3                                                                & 4                                                                 & 7                   & WIP             & \textgreater18
+      E.C.  & 4            & 3                                                                & 4                                                                 & 7                   & W.I.P.             & \textgreater18
     \end{tabular}
   \end{table}
 \end{frame}
@@ -124,7 +124,7 @@
   \begin{itemize}
   \item Several papers related to classification tasks;
   \item Similar results in clustering approaches (Ensemble of clusterings and consensus clustering);
-  \item Few time series ensemble selection techniques (1 paper describing an adequate method);
+  \item No time series ensemble selection techniques;
     \begin{itemize}
     \item Contribution potential.
     \end{itemize}
