Added more content to the full paper slides, fixed a typo in the full paper. Added figures and references to the slides as well.

--- a/full-paper/references.bib
+++ b/full-paper/references.bib
@@ -557,6 +557,14 @@ We demonstrate the interpretative value of producing prototypes on the well-know
   url =      {http://www.sciencedirect.com/science/article/pii/S0098300415300893}
 }
 
+@inproceedings{schiozer:2015,
+  title={Integrated Model Based Decision Analysis in Twelve Steps Applied to Petroleum Fields Development and Management},
+  author={Schiozer, Denis Jos{\'e} and Santos, Antonio Alberto Souza and Drumond, Paulo Soares and others},
+  booktitle={EUROPEC 2015},
+  year={2015},
+  organization={Society of Petroleum Engineers}
+}
+
 @Article{tsclust-montero:2014,
   Title                    = {TSclust: An R Package for Time Series Clustering},
   Author                   = {Pablo Montero and José Vilar},
