--- a/short-paper/extended-abstract.tex
+++ b/short-paper/extended-abstract.tex
@@ -10,6 +10,9 @@
 \usepackage{ccicons}  % for Creative Commons citation icons
 \usepackage{ragged2e} % for tighter hyphenation
 
+\usepackage{amsmath}
+\usepackage{amsthm}
+\usepackage{amssymb}
 \graphicspath{{figures/}{./}}
 
 % \usepackage{marginnote} \usepackage[shortlabels]{enumitem}
@@ -81,288 +84,73 @@
 
 \keywords{\plainkeywords}
 
-\category{G.3}{Probability and Statistics}{Time Series Analysis}}
+\category{G.3}{Probability and Statistics}{Time Series Analysis}
 
 \section{Introduction}
-This format is to be used for submissions that are published in the
-conference publications. We wish to give this volume a consistent,
-high-quality appearance. We therefore ask that authors follow some
-simple guidelines. In essence, you should format your paper exactly
-like this document. The easiest way to do this is to replace the
-content with your own material.
+The recent introduction of ensemble methods in the oil industry has made it possible to apply several newer computational approaches to solve existing problems, such as: history matching \cite{aanonsen:2009}, enhance production forecasts \cite{wen:2005}, and improve strategical planning for oil reservoirs \cite{aanonsen:2009, chen:2009}. One of the key tasks in reservoir management is to evaluate the profitability of a reservoir. To accomplish this, a production strategy is developed and simulated in order to estimate the ammount and flow of hydrocarbons in the field. Due to uncertainties inherent to the geological model, serveral hundred possible scenarios are obtained for each strategy.
 
-\section{ACM Copyrights \& Permission}
-Accepted extended abstracts and papers will be distributed in the
-Conference Publications. They will also be placed in the ACM Digital
-Library, where they will remain accessible to thousands of researchers
-and practitioners worldwide. To view the ACM's copyright and
-permissions policy, see:
-\url{http://www.acm.org/publications/policies/copyright_policy}.
+Steagall and Schiozer \cite{steagall:2001} propose the use of three classes of models to evaluate the performance of a production strategy: a pessimistic, probable and optimistic models with respect to the Net Present Value (NPV). Schiozer et al. \cite{schiozer:2004} improved the approach by requiring that the models selected be representative in other properties, such as Cumulative Oil Production (NP), Cumulative Water Production (WP) and Oil Recovery Factor (ORF) as well.
 
-\marginpar{%
-  \vspace{-45pt} \fbox{%
-    \begin{minipage}{0.925\marginparwidth}
-      \textbf{Good Utilization of the Side Bar} \\
-      \vspace{1pc} \textbf{Preparation:} Do not change the margin
-      dimensions and do not flow the margin text to the
-      next page. \\
-      \vspace{1pc} \textbf{Materials:} The margin box must not intrude
-      or overflow into the header or the footer, or the gutter space
-      between the margin paragraph and the main left column. The text
-      in this text box should remain the same size as the body
-      text. Use the \texttt{{\textbackslash}vspace{}} command to set
-      the margin
-      note's position. \\
-      \vspace{1pc} \textbf{Images \& Figures:} Practically anything
-      can be put in the margin if it fits. Use the
-      \texttt{{\textbackslash}marginparwidth} constant to set the
-      width of the figure, table, minipage, or whatever you are trying
-      to fit in this skinny space.
-    \end{minipage}}\label{sec:sidebar} }
+However the process of selecting this subset is a challenging task due to the sheer number of possible outcomes of a simulation and the constraints that need to be satisfied. Several approaches have been proposed to accomplish this task, ranging from optimization based approaches, to clustering and classification. We propose an approach that takes into account a range of time from each simulation and rank its outcomes according to a score function detailed below. We also propose a novel time series visualization tool to help analyze the adherence of each series the a set of percentile curves (P$_{10}$, P$_{50}$ and P$_{90}$) calculated from the simulations, as proposed by Stegall and Schiozer \cite{steagall:2001}.
 
-\section{Page Size}
-All SIGCHI submissions should be US letter (8.5 $\times$ 11
-inches). US Letter is the standard option used by this \LaTeX\
-template.
+\section{Related Work}
+\label{sec:rel-work}
+The analysis and visualization of ensemble data is a daunting task due to their high complexity and dimensionality. As a result, there are several published approaches to accomplish these tasks \cite{phadke:2012, hlawitschka:2013, ensemblevis-potter:2009, multicharts-demir:2014}. In particular, Potter et al. \cite{ensemblevis-potter:2009} proposed the development of a framework for statistical visualization of bidimensional weather ensembles. The work of Demir et al. \cite{multicharts-demir:2014} proposed a technique for the interactive visual exploration of tridimensional scalar ensembles using brushing and linking, in addition to line and bar charts of statistical data measures.
 
-\section{Text Formatting}
-Please use an 8.5-point Verdana font, or other sans serifs font as
-close as possible in appearance to Verdana in which these guidelines
-have been set. Arial 9-point font is a reasonable substitute for
-Verdana as it has a similar x-height. Please use serif or
-non-proportional fonts only for special purposes, such as
-distinguishing \texttt{source code} text.
+Another approach to analyze this data is to select a reduced number of elements that are representative of the whole ensemble. Recent approaches have modelled this task as an optimization problem, where the goal is to maximize, or minimize, an objective function. In this context, Sarma et al. \cite{selection-sarma:2013} modeled the selection as a constrained minimax combinatorial optimization problem and solved it by doing an exhaustive search over the solution space for small ensembles and by employing a greedy algorithm to search for a solution in larger ensembles. Their approach reportedly performs faster and is more accurate than clustering approaches. Meira et al. \cite{meira:2016} employed the same approach to select a set of representative models that minimizes a multi-objective cost function composed by a risk curve factor, an attribute-level coverage factor and a weighted cross plot spread factor. By minimizing this function, Meira's approach selects high quality sets of representative models without optimistic or pessimistic biases. Both approaches show that the optimization approach obtains promising results while maintaining a good computational cost.
 
-\subsubsection{Text styles}
-The \LaTeX\ template facilitates text formatting for normal (for body
-text); heading 1, heading 2, heading 3; bullet list; numbered list;
-caption; annotation (for notes in the narrow left margin); and
-references (for bibliographic entries). Additionally, here is an
-example of footnoted\footnote{Use footnotes sparingly, if at all.}
-text. As stated in the footnote, footnotes should rarely be used.
+\section{Tools and Techniques}
+\label{sec:tools}
+This section describes the techniques developed in our work.
+
+\subsection{Objective Function}
+\label{sec:obj_func}
+In order to select the representative models, we must define the criteria they must satisfy. The desired models must be close to a set of reference models selected by the user. The traditional approach uses the P$_{10}$, P$_{50}$ and P$_{90}$ models calculated from the ensemble as references. Given the absolute ranking calculated based on the euclidean distance between the entities, we assign a score for each possible rank. For an ensemble of $N$ entities, we use a linear function $f(r) = N - r - 1$, where $\left(r \in \mathbb{N} | r \in [1, N] \right)$ as the score for each rank $r$. We also assign a weight for each simulation time step based on the desired adherence between the candidate models and the references. The definition of this function depends on the type of analysis and behavior of the ensemble itself.
+
+\subsection{Rank Chart}
+\label{sec:rank}
+When searching for meaningful entities in an ensemble there is usually a synthetic ideal entity used as reference, and the task is to select the ensemble entity that most closely resembles the reference. With time series data, the user may search for a series that closely matches the reference in a number of time steps. To help with this task, a novel type of visualization is proposed: the Rank Chart. This chart graphs the ranking of ensemble elements against a reference, along the time axis. Figure \ref{fig:rank-sample} shows an example of a rank chart.
+
+The rank chart is built by iterating through the time steps of the ensemble entities and calculating the distance between each series and the reference up to that step. This distance is then ordered in ascending order and ranked accordingly. This process creates a new set of time series, now composed of the absolute ranks attained by each ensemble entity at each time step. These ranks are then plotted in a two-dimensional plane where the $X$ axis is the time step and the $Y$ axis is the rank.
 
 \begin{figure}
-  \includegraphics[width=0.9\columnwidth]{figures/sigchi-logo}
-  \caption{Insert a caption below each figure.}~\label{fig:sample}
+  \centering
+  \includegraphics[width=0.7\columnwidth]{rank-common-40.pdf}
+  \caption{Rank chart of 40 ensemble elements using the calculated P$_{10}$ curve as reference. The curves in green were selected by both the score and manual approaches.}
+  \label{fig:rank-sample}
 \end{figure}
 
-\subsection{Language, style, and content}
-The written and spoken language of SIGCHI is English. Spelling and
-punctuation may use any dialect of English (e.g., British, Canadian,
-US, etc.) provided this is done consistently. Hyphenation is
-optional. To ensure suitability for an international audience, please
-pay attention to the following:
+\section{Experiments}
+\label{sec:experiments}
+As a proof of concept, the techniques presented in this work have been applied using simulations of a synthetic oil reservoir. The data are composed of 200 simulations before and after history matching. Each simulation possesses several properties of varied types, such as grid porosity, permeability and oil, water and gas saturations, as well as fluid productions of each reservoir well.
 
-\begin{table}
+One of the key analysis tasks is the selection of the P$_{10}$, P$_{50}$ and P$_{90}$ models based on the production forecast data. These models can be used to compare the performance of different strategies applied on the same reservoir.
+
+The process begins with the selection of the wells and properties to be processed. For our analysis, we selected the cumulative oil production (NP) of the producer wells. The score weight function chosen is the $w(t) = arctan(t)$. The first set of candidates was selected using a score based approach. The second set was selected manually using a scatter chart with the models in the $x$ axis and their distance to the reference in the $y$ axis. The third set of models was selected by applying a $k$ Nearest Neighbors on the projections of the models after applying a Multidimensional Scaling (MDS) algorithm. Figure \ref{fig:models-p50} shows rank and fan charts of the candidates for each approach in the P$_{50}$ case.
+
+\begin{figure}
   \centering
-  \begin{tabular}{r c c}
-    % \toprule
-    & \multicolumn{2}{c}{\small{\textbf{Caption}}} \\
-    \cmidrule(r){2-3}
-    {\small\textbf{Objects}}
-    & {\small \textit{Pre-2002}}
-    & {\small \textit{Current}} \\
-    \midrule
-    Tables & Above & Below \\
-    Figures & Below & Below \\
-    % \bottomrule
-  \end{tabular}
-  \caption{Table captions should be placed below the table. Minimize use of
-    unnecessary table lines.}~\label{tab:table1}
-\end{table}
+  \includegraphics[width=\columnwidth]{rank-fan-score-p50.pdf}
+  \includegraphics[width=\columnwidth]{rank-fan-brush-p50.pdf}
+  \includegraphics[width=\columnwidth]{rank-fan-mds-sel-p50.pdf}
+  \caption{Rank and Fan charts of the models selected by each approach for the P$_{50}$ percentile. From top to bottom, we have the score selection, manual selection and MDS kNN selection.}
+  \label{fig:models-p50}
+\end{figure}
 
-\begin{itemize}\compresslist%
-\item Write in a straightforward style. Use simple sentence
-  structure. Try to avoid long sentences and complex sentence
-  structures. Use semicolons carefully.
-\item Use common and basic vocabulary (e.g., use the word ``unusual''
-  rather than the word ``arcane'').
-\item Briefly define or explain all technical terms. The terminology
-  common to your practice/discipline may be different in other design
-  practices/disciplines.
-\item Spell out all acronyms the first time they are used in your
-  text. For example, ``World Wide Web (WWW)''.
-\item Explain local references (e.g., not everyone knows all city
-  names in a particular country).
-\item Explain ``insider'' comments. Ensure that your whole audience
-  understands any reference whose meaning you do not describe (e.g.,
-  do not assume that everyone has used a Macintosh or a particular
-  application).
-\item Explain colloquial language and puns. Understanding phrases like
-  ``red herring'' requires a cultural knowledge of English. Humor and
-  irony are difficult to translate.
-\item Use unambiguous forms for culturally localized concepts, such as
-  times, dates, currencies, and numbers (e.g., ``1-5- 97'' or
-  ``5/1/97'' may mean 5 January or 1 May, and ``seven o'clock'' may
-  mean 7:00 am or 19:00). For currencies, indicate equivalences:
-  ``Participants were paid {\fontfamily{txr}\selectfont \textwon}
-  25,000, or roughly US \$22.''
-\item Be careful with the use of gender-specific pronouns (he, she)
-  and other gender-specific words (chairman, manpower,
-  man-months). Use inclusive language (e.g., she or he, they, chair,
-  staff, staff-hours, person-years) that is gender-neutral. If
-  necessary, you may be able to use ``he'' and ``she'' in alternating
-  sentences, so that the two genders occur equally
-  often~\cite{Schwartz:1995:GBF}.
-\end{itemize}
+\section{Conclusions}
+\label{sec:conclusion}
+In this paper, we proposed an approach to select representative models for time series ensembles. To accomplish this task, we proposed a score function to automatically select a subset of time series as possible candidates for the representative model subset. The results indicate that our approach obtains a good set of possible candidates.
 
-\marginpar{\vspace{5pc}So long as you don't type outside the right
-  margin or bleed into the gutter, it's okay to put annotations over
-  here on the left, too. You'll have to manually align the margin
-  paragraphs to your \LaTeX\ floats using the
-  \texttt{{\textbackslash}vspace{}} command.}
+We also developed a graphical tool, named rank chart, in order to evaluate the adherence of ensemble members to a reference curve. When compared to other graphical tools, such as the fan chart, the behavior of the ensemble time series could be easily compared to a reference curve even in the presence of a low variance between the curves.
 
-% \begin{figure}
-%   \includegraphics[width=.9\columnwidth]{figures/ea-figure2}
-%   \caption{If your figure has a light background, you can set its
-%     outline to light gray, like this, to make a box around
-%     it.}\label{fig:bats}
-% \end{figure}
-
-\begin{marginfigure}[-45pc]
-  \begin{minipage}{\marginparwidth}
-    \centering
-    \includegraphics[width=0.9\marginparwidth]{figures/cats}
-    \caption{In this image, the cats are tessellated within a square
-      frame. Images should also have captions and be within the
-      boundaries of the sidebar on page~\pageref{sec:sidebar}. Photo:
-      \cczero.}~\label{fig:marginfig}
-  \end{minipage}
-\end{marginfigure}
-
-\section{Figures}
-The examples on this and following pages should help you get a feel
-for how screen-shots and other figures should be placed in the
-template. Your document may use color figures (see
-Figures~\ref{fig:sample}), which are included in the page limit; the
-figures must be usable when printed in black and white. You can use
-the \texttt{\marginpar} command to insert figures in the (left) margin
-of the document (see Figure~\ref{fig:marginfig}). Finally, be sure to
-make images large enough so the important details are legible and
-clear (see Figure~\ref{fig:cats}).
-
-\section{Tables}
-You man use tables inline with the text (see Table~\ref{tab:table1})
-or within the margin as shown in Table~\ref{tab:table2}. Try to
-minimize the use of lines (especially vertical lines). \LaTeX\ will
-set the table font and captions sizes correctly; the latter must
-remain unchanged.
-
-\section{Accessibility}
-The Executive Council of SIGCHI has committed to making SIGCHI
-conferences more inclusive for researchers, practitioners, and
-educators with disabilities. As a part of this goal, the all authors
-are asked to work on improving the accessibility of their
-submissions. Specifically, we encourage authors to carry out the
-following five steps:
-\begin{itemize}\compresslist%
-\item Add alternative text to all figures
-\item Mark table headings
-\item Generate a tagged PDF
-\item Verify the default language
-\item Set the tab order to ``Use Document Structure''
-\end{itemize}
-
-For links to instructions and resources, please see:
-\url{http://chi2016.acm.org/accessibility}
-
-Unfortunately good tools do not yet exist to create tagged PDF files
-from Latex. \LaTeX\ users will need to carry out all of the above
-steps in the PDF directly using Adobe Acrobat, after the PDF has been
-generated.
-
-For more information and links to instructions and resources, please
-see:
-\url{http://chi2016.acm.org/accessibility}.
-
-\section{Producing and Testing PDF Files}
-We recommend that you produce a PDF version of your submission well
-before the final deadline. Your PDF file must be ACM DL Compliant and
-meet stated requirements,
-\url{http://www.sheridanprinting.com/typedept/ACM-distilling-settings.htm}.
-
-\begin{figure*}
-  \centering
-  \includegraphics[width=1.4\columnwidth]{figures/map}
-  \caption{In this image, the map maximizes use of space. You can make
-    figures as wide as you need, up to a maximum of the full width of
-    both columns. Note that \LaTeX\ tends to render large figures on a
-    dedicated page. Image: \ccbynd~ayman on Flickr.}~\label{fig:cats}
-\end{figure*}
-
-\begin{margintable}[1pc]
-  \begin{minipage}{\marginparwidth}
-    \centering
-    \begin{tabular}{r r r}
-      & {\small \textbf{First}}
-      & {\small \textbf{Second}} \\
-      \toprule
-      Child & 22 & 44 \\
-      Adult & 22 & 16 \\
-      \midrule
-      Gene & 22 & 11 \\
-      Cliff & 34 & 22 \\
-      \bottomrule
-    \end{tabular}
-    \caption{A simple narrow table in the left margin
-      space.}~\label{tab:table2}
-  \end{minipage}
-\end{margintable}
-Test your PDF file by viewing or printing it with the same software we
-will use when we receive it, Adobe Acrobat Reader Version 10. This is
-widely available at no cost. Note that most
-reviewers will use a North American/European version of Acrobat
-reader, so please check your PDF accordingly.
-
-\section{Acknowledgements}
-We thank all the volunteers, publications support, staff, and authors
-who wrote and provided helpful comments on previous versions of this
-document. As well authors 1, 2, and 3 gratefully acknowledge the grant
-from NSF (\#1234--2222--ABC). Author 4 for example may want to
-acknowledge a supervisor/manager from their original employer. This
-whole paragraph is just for example. Some of the references cited in
-this paper are included for illustrative purposes only.
-
-\section{References Format}
-Your references should be published materials accessible to the
-public. Internal technical reports may be cited only if they are
-easily accessible (i.e., you provide the address for obtaining the
-report within your citation) and may be obtained by any reader for a
-nominal fee. Proprietary information may not be cited. Private
-communications should be acknowledged in the main text, not referenced
-(e.g., ``[Golovchinsky, personal communication]'').
-
-Use a numbered list of references at the end of the article, ordered
-alphabetically by first author, and referenced by numbers in
-brackets~\cite{ethics,Klemmer:2002:WSC:503376.503378}. For papers from
-conference proceedings, include the title of the paper and an
-abbreviated name of the conference (e.g., for Interact 2003
-proceedings, use Proc.\ Interact 2003). Do not include the location of
-the conference or the exact date; do include the page numbers if
-available. See the examples of citations at the end of this document
-and in the accompanying \texttt{BibTeX} document.
-
-References \textit{must be the same font size as other body
-  text}. References should be in alphabetical order by last name of
-first author. Example reference formatting for individual journal
-articles~\cite{ethics}, articles in conference
-proceedings~\cite{Klemmer:2002:WSC:503376.503378},
-books~\cite{Schwartz:1995:GBF}, theses~\cite{sutherland:sketchpad},
-book chapters~\cite{winner:politics}, a journal issue~\cite{kaye:puc},
-websites~\cite{acm_categories,cavender:writing},
-tweets~\cite{CHINOSAUR:venue}, patents~\cite{heilig:sensorama}, and
-online videos~\cite{psy:gangnam} is given here. This formatting is a
-slightly abbreviated version of the format automatically generated by
-the ACM Digital Library (\url{http://dl.acm.org}) as ``ACM Ref''. More
-details of reference formatting are available at:
-\url{http://www.acm.org/publications/submissions/latex_style}.
+When compared to previous works, our approach makes a significant contribution by dealing with a range of production values. However, our approach considers only one property at a time. This may result in a sub-optimal selection when compared to more recent approaches \cite{selection-sarma:2013, meira:2016} which take into account multiple properties.
 
 \balance{} 
 
 % \bibliographystyle{ACM-Reference-Format-Journals}
 \bibliographystyle{SIGCHI-Reference-Format}
 % \bibliographystyle{acm}
-\bibliography{sample}
+\bibliography{references}
 
 \end{document}
 
