--- a/short-paper/extended-abstract.tex
+++ b/short-paper/extended-abstract.tex
@@ -19,18 +19,18 @@
 % \usepackage{paralist}
 
 %% EXAMPLE BEGIN -- HOW TO OVERRIDE THE DEFAULT COPYRIGHT STRIP --
-% \copyrightinfo{Permission to make digital or hard copies of all or
-% part of this work for personal or classroom use is granted without
-% fee provided that copies are not made or distributed for profit or
-% commercial advantage and that copies bear this notice and the full
-% citation on the first page. Copyrights for components of this work
-% owned by others than ACM must be honored. Abstracting with credit is
-% permitted. To copy otherwise, or republish, to post on servers or to
-% redistribute to lists, requires prior specific permission and/or a
-% fee. Request permissions from permissions@acm.org.\\
-% {\emph{CHI'14}}, April 26--May 1, 2014, Toronto, Canada. \\
-% Copyright \copyright~2014 ACM ISBN/14/04...\$15.00. \\
-% DOI string from ACM form confirmation}
+\copyrightinfo{Permission to make digital or hard copies of all or
+ part of this work for personal or classroom use is granted without
+ fee provided that copies are not made or distributed for profit or
+ commercial advantage and that copies bear this notice and the full
+ citation on the first page. Copyrights for components of this work
+ owned by others than ACM must be honored. Abstracting with credit is
+ permitted. To copy otherwise, or republish, to post on servers or to
+ redistribute to lists, requires prior specific permission and/or a
+ fee. Request permissions from permissions@acm.org.\\
+ {\emph{CHI'14}}, April 26--May 1, 2014, Toronto, Canada. \\
+ Copyright \copyright~2014 ACM ISBN/14/04...\$15.00. \\
+ DOI string from ACM form confirmation}
 %% EXAMPLE END
 
 \title{Selecting scenarios in temporal ensembles}
